5.1.7 -> 5.1.8:
    - jbj: rpmiob: fix: return iob to _rpmiobPool instead.
    - rse: add RPM Lua function rpm.hostname()
    - jbj: yarn: convert mire to usage mutex with refcounts
	(unifying array <-> element mutexes by copying use/pool
	pointers throughout the array).
    - jbj: rpmku: rework rpmiob handling to avoid extra malloc's.
    - jbj: rpmiob: fix: add a newref in rpmiobNew.
    - jbj: rpmiob: backport the rpmiob interface into rpmku too.
    - jbj: rpmiob: backport the remainder of rpmiob, eliminate StringBuf.
    - jbj: backport HAVE_PTHREADS_H -> WITH_PTHREADS AutoFu logic.
    - jbj: more hack-o-rounds for LUA <-> PCRE, add --disable-static for now.
    - jbj: backport rpmiotypes.h/rpmiob.c, use rpmiobSlurp instead.
    - jbj: fix: handle ./../foo paths correctly (#491388).
    - jbj: rpmlib: rescusitate splint annotations.
    - jbj: rpmdb: rescusitate splint annotations.
    - jbj: rpmtsOrder: fully enable parentdir deps when ordering.
    - jbj: rpmtsOrder: enable parentdir/linkto ordering relations.
    - jbj: initialize ts->PRCO lazily (measured 20.4% rpm -qa speedup ymmv).
    - jbj: EVRtuple: fix: dig out the one time mire allocation leak.
    - jbj: use rpmioFreePoolItem for rpmds, eliminate rpmdsFree.
    - jbj: finish up using rpmioFreePoolItem() for rpmts and Header objects.
    - devzero2000: continuing for refcount rewrite : add define of fooFree to rpmioFreePoolItem
    - devzero2000: begin change programming style for refcount : rpmtsFree and h
eaderFree
    - jbj: rpmio: rescusitate splint annotations.
    - jbj: getdate: ignore internalState changes.
    - jbj: zlog: use struct rpmioItem_s use/pool container.
    - jbj: poptIO: add --htdebug.
    - jbj: yarn: convert rpmfc to usage mutex with refcounts.
    - jbj: yarn: convert hashTable to usage mutex with refcounts.
    - jbj: yarn: convert rpmmg to usage mutex with refcounts.
    - jbj: yarn: convert rpmwf refcount to usage mutex.